freelance dashboard page is updated

--- a/freelancer/02-dashboard/freelancer-dashboard.html
+++ b/freelancer/02-dashboard/freelancer-dashboard.html
@@ -16,8 +16,8 @@ fdb = freelancer dashboard;
   </head>
   <body>
     <header class="alt_bdb_header">
-      <div class="container-custom container">
-        <div class="row">
+      <div class="container-custom container-fluid">
+        <div class="row gx-xxl-0">
           <div class="col-lg-2 position-relative left-column">
             <div
               class="alt_bdb_logo d-flex justify-content-between align-items-lg-start custom-border"
@@ -909,8 +909,8 @@ fdb = freelancer dashboard;
     <!-- notification canvas end -->
 
     <main class="main_section">
-      <div class="container-custom container">
-        <div class="row">
+      <div class="container-custom container-fluid">
+        <div class="row gx-xxl-0">
           <!-- sidebar start -->
           <div
             class="col-lg-2 border-end border-light-subtle d-none d-lg-block left-column"
